# synapse-cli

./: CLAUDE.md  LOG.md  main.py  pyproject.toml
docs/: LOG.md  plan-phase1.md
synapse/: cli.py  db.py  deck.py  mcp_server.py
synapse/templates/: CLAUDE.project.md
tests/: test_cli.py  test_mcp_server.py  test_prompts.py
