[project]
name = "synapse-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "click>=8.3.3",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "mcp>=1.27.0",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
]

[project.scripts]
synapse            = "synapse.cli:cli"
synapse-mcp-server = "synapse.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
